Fix Akka tests