@@ -77,10 +77,19 @@ compileJava.options.bootstrapClasspath = files("${jdk8}/jre/lib/rt.jar", "${jdk8
 //
 // These properties must be set in gradle.properties to point to the java executable.
 // For example: java8=/Library/Java/JavaVirtualMachines/jdk1.8.0_45.jdk/Contents/Home/bin/java
+//
+// Note: These test settings apply to both unit and instrumentation tests but some instrumentation tests override them in
+// their own build.gradle to force the use of a specific version of Java (e.g. instrumentation/async-http-client-2.0.0).
+// This could lead to an "Unrecognized option" with the failure "Could not create the Java Virtual Machine".
 test {
     if (project.hasProperty("test16")) {
         executable = jdk16 + '/bin/java'
         jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                '--add-opens=java.base/java.util=ALL-UNNAMED',
+                '--add-opens=java.base/java.net=ALL-UNNAMED',
+                '--add-opens=java.base/java.io=ALL-UNNAMED',
+                '--add-opens=java.base/sun.net.spi=ALL-UNNAMED',
+                '--add-exports=java.base/sun.net.spi=ALL-UNNAMED',
                 '--add-exports=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED'
         useJUnit {
             excludeCategories 'com.newrelic.test.marker.Java16IncompatibleTest'
